# deepagents

./: .gitignore  AGENTS.md  ARCHITECTURE_RECOMMENDATION.txt  BUGFIX_VERIFICATION_REPORT.md  CHANGELOG_CONVERTER_INTEGRATION.md  CHANGELOG_V0.4.0.md  CHANGELOG_V5.1.md  CLAUDE.md  DELIVERY_SUMMARY.txt  EXTERNAL_PROPOSAL_ANALYSIS.md  MERGE_LOG.md  PR_SUBAGENT_LOGGING.md  QA_E2E_SESSION_LOG.md  QA_E2E_SESSION_LOG_ROUND5.md  QA_FINAL_TEST_REPORT_ROUND4.md  QA_FULL_TEST_REPORT.md  QUALITY_ASSURANCE_FINAL_REPORT.md  QUALITY_TEST_REPORT.md  QUICKSTART_SUBAGENT_LOGGING.md  README.md  RELEASE_NOTES_v0.4.0.md  SUBAGENT_LOGGING_IMPLEMENTATION_PLAN.md  TEST_REPORT_2026-03-02.md  UPSTREAM_MERGE_FINAL_SUMMARY.md  UPSTREAM_MERGE_LOG.md  UPSTREAM_MERGE_LOG_2026-03-13.md  UPSTREAM_MERGE_LOG_BATCH2.md  UPSTREAM_MERGE_LOG_ROUND4.md  UPSTREAM_MERGE_TEST_REPORT.md  git-merge-workflow.skill
.agents/skills/: langchain-agents.skill
.github/workflows/: ci.yml  evals.yml  harbor.yml  pr_lint.yml  release-please.yml  release.yml
docs/: Claude-Code与DeepAgents-Skill系统对比分析报告-v2.md  Claude-Code与DeepAgents-Skill系统对比分析报告.md  DOCUMENTATION_CHECK_REPORT.md  DeepAgents_SkillsMiddlewareV2升级设计方案.md  FILE_UPLOAD_FRONTEND_INTEGRATION.md  PR1_types.patch  PR2_resource_discovery.patch  Phase3_CodeReview_Report.md  SDK_MIGRATION_GUIDE_v0.4.0.md  SDK_UPGRADE_GUIDE.md  SUBAGENT_LOGGING_ARCHITECTURE.md  SkillsMiddleware_V2_PR 实施指南.md  SkillsMiddleware_V2_核查报告.md  UPLOAD_ADAPTER_GUIDE.md  context-overflow-bugfix.md  sandbox-lifecycle-management.md  基于LangGraph与渐进式披露的动态Skill系统实现方案.md
docs/api/: API_REFERENCE.md  EXTERNAL_TEAM_API_GUIDE.md  SDK_UPGRADE_GUIDE.md  SDK_UPGRADE_NOTICE_ROUND10_11.md  SDK_UPGRADE_NOTICE_ROUND13.md  SDK_UPGRADE_NOTICE_ROUND14.md  SDK_v0.5.0_UPGRADE_NOTICE.md
docs/architecture/: 2026-04-29-fork-customization-downsink-plan.md  2026-05-01-fork-customization-downsink-plan-v2.md  2026-05-01-fork-customization-downsink-plan-v3.md  2026-05-02-fork-enhancement-package-plan-v4.md  2026-05-02-plan-h-plus-final.md  2026-05-03-d1-fork-archive-sop.md  2026-05-03-d2-subagent-telemetry-hook-design.md  2026-05-03-phase-1-5-acceptance-report.md  2026-05-03-phase-1-6-acceptance-report.md  2026-05-03-phase-1-7-p2-cto-recantation.md  2026-05-03-phase-1-handoff-package.md  2026-05-03-phase-a-diagnosis-report.md  2026-05-03-subagent-termination-best-practices.md  2026-05-04-fork-vs-pypi-diff-evaluation.md
docs/attachment_function_docs/: ATTACHMENT_MIDDLEWARE_REMOVAL_PLAN.md  COMPREHENSIVE_REVIEW_REPORT.md  DEEP_BASE_ANALYSIS_REPORT.md  EXPERT_REVIEW_ROUND1.md  EXPERT_REVIEW_ROUND2.md  EXPERT_REVIEW_ROUND3.md  FINAL_DELIVERY_REPORT.md  IMPLEMENTATION_SUMMARY.md  UNIVERSAL_UPLOAD_ADAPTER_V1.md  UNIVERSAL_UPLOAD_ADAPTER_V2.md  UNIVERSAL_UPLOAD_ADAPTER_V3.md  UNIVERSAL_UPLOAD_ADAPTER_V4.md  UNIVERSAL_UPLOAD_ADAPTER_V5.md  V4_COMPREHENSIVE_REVIEW_REPORT.md  comprehensive_verification_report.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/sdk_migration_docs/: SDK_MIGRATION_GUIDE_v0.3.13.md  SDK_MIGRATION_GUIDE_v0.4.0.md
docs/skillsmiddleware_docs/: DeepAgents_SkillsMiddleware_V2_升级设计方案_final.md  DeepAgents_SkillsMiddleware_V2_升级设计方案_final_修订.md  SkillsMiddleware_V2_实施方案.md
docs/temp/: report.md
docs/testing/: attachment-upload-fix-log.md  attachment-upload-implementation-review.md
docs/unified_file_reader/: UNIFIED_FILE_READER_DESIGN.md
docs/upstream_merge/: 01_commit_analysis.md  02_conflict_analysis.md  03_implementation_plan.md  04_test_verification.md  05_architect_review.md  06_cto_review.md  07_test_strategy.md  2026-03-17_upstream_143_commits_risk_analysis.md  PR_CONTENT.md  PR_CREATION_GUIDE.md  PR_DESCRIPTION.md  README.md  ROUND10_MERGE_LOG.md  ROUND10_PROGRESS.md  ROUND10_RISK_ASSESSMENT.md  ROUND11_RISK_ASSESSMENT.md  ROUND12_RISK_ASSESSMENT.md  ROUND13_PROGRESS.md  ROUND13_RISK_ASSESSMENT.md  ROUND14_PROGRESS.md  ROUND14_RISK_ASSESSMENT.md  ROUND15_PROGRESS.md  ROUND15_RISK_ASSESSMENT.md  ROUND16_DEFERRED_BACKLOG.md  ROUND16_FRAMEWORK_PIVOT_TASK_DRIVEN.md  ROUND16_GATE2_CHECKLIST.md  ROUND16_GATE_1_0_SMOKE_REPORT.md  ROUND16_GATE_1_5_AUDIT.md  ROUND16_GATE_1_5_AUDIT_TEMPLATE.md  ROUND16_GOVERNANCE.md  ROUND16_PROGRESS.md  (+32 more)
libs/deepagents/: Makefile  README.md  pyproject.toml
libs/deepagents/.venv311/: pyvenv.cfg
libs/deepagents/deepagents/: __init__.py  _models.py  _version.py  graph.py  upload_adapter.py
libs/deepagents/deepagents/_api/: __init__.py  deprecation.py
libs/deepagents/deepagents/backends/: filesystem.py  protocol.py  sandbox.py  state.py  utils.py
libs/deepagents/deepagents/middleware/: __init__.py  attachment.py  filesystem.py  memory.py  skills.py  subagents.py  summarization.py
libs/deepagents/deepagents/middleware/converters/: __init__.py  base.py  csv.py  docx.py  image.py  pdf.py  pptx.py  registry.py  text.py  utils.py  xlsx.py
libs/deepagents/deepagents/profiles/: __init__.py
libs/deepagents/deepagents/profiles/harness/: __init__.py
libs/deepagents/tests/: utils.py
libs/deepagents/tests/evals/: test_summarization.py
libs/deepagents/tests/integration_tests/: conftest.py  test_deepagents.py  test_filesystem_middleware.py  test_langsmith_sandbox.py  test_skills_dynamic_loading.py
libs/deepagents/tests/performance_tests/: __init__.py  test_converter_performance.py
libs/deepagents/tests/unit_tests/: test_end_to_end.py  test_graph.py  test_graph_skills_flag_wiring.py  test_subagents.py  test_upload_adapter.py
libs/deepagents/tests/unit_tests/backends/: test_filesystem_backend.py  test_sandbox_backend.py
libs/deepagents/tests/unit_tests/middleware/: stream_writer_wiring_test.py  test_attachment_middleware.py  test_filesystem_ls_glob_compat.py  test_memory.py  test_skills_dynamic_tools.py  test_skills_middleware.py  test_subagent_logging.py  test_subagent_stream_writer.py
libs/deepagents/tests/unit_tests/middleware/converters/: __init__.py  test_converter_integration.py
libs/deepagents/tests/unit_tests/smoke_tests/: test_system_prompt.py
libs/deepagents/tests/unit_tests/smoke_tests/snapshots/: system_prompt_with_memory_and_skills.md
(+117 files in other folders)
